# qr-schema

./: .gitignore  Cargo.toml
qr-model/: Cargo.toml
qr-model/src/: bucket.rs  builtin.rs  chart.rs  common.rs  item.rs  lib.rs  metrics.rs  tag.rs
qr-repo/: Cargo.toml
qr-repo/src/: bucket.rs  convert.rs  core.rs  initializer.rs  item.rs  lib.rs  sequence.rs  util.rs
qr-server/: Cargo.toml
qr-server/src/: config.rs  err.rs  logging.rs  main.rs
qr-server/src/controller/: bucket.rs  common.rs  item.rs  mod.rs  query.rs  stat.rs
qr-server/src/service/: bucket.rs  chart.rs  err.rs  item.rs  metrics.rs  mod.rs  stat.rs
qr-server/src/service/stat/: common.rs  convert.rs  group.rs  indicator.rs  line_chart.rs  mod.rs  pie_chart.rs  plain.rs  query.rs
qr-util/: Cargo.toml
qr-util/src/: lib.rs  option.rs
script/: zip.sh
