[package]
name = "qr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
qr-model = { path = "../qr-model" }
qr-repo = { path = "../qr-repo" }

rocket = { version = "0.5.1", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.209", features = ["derive"] }
log = "0.4.22"
serde_json = "1.0.127"