[package]
name = "qr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
qr-model = { path = "../qr-model" }
qr-repo = { path = "../qr-repo" }
qr-util = { path="../qr-util" }

rocket = { version = "0.5.1", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.209", features = ["derive"] }
log = "0.4.22"
serde_json = "1.0.127"
dateparser = "0.2.1"
rusty-money = { version = "0.4.1", features = ["iso"] }
rust_decimal = { version = "1.36.0", features = ["serde"] }
rust_decimal_macros = "1.36.0"
clap = { version = "4.5.17", features = ["cargo", "derive"] }
homedir = "0.3.3"
itertools = "0.13.0"
jsonpath = "0.1.1"
